# ChatGPT-Dev

./: 2D_FPS.html  README.md  index.html
Floppy bird/: FB.html
Rocket_2D_Game/: floppy_bird.py
TMP-CT/: CMakeLists.txt  main.c  pico_sdk_import.cmake
laptop_temp/: pico_led_control.c
neural_network/: CMakeLists.txt  main.c
pico-usb-test/: CMakeLists.txt
raspberry_pi_pico/laptop_temp/: CMakeLists.txt
raspberry_pi_pico/neural_network/: pico_sdk_import.cmake
raspberry_pi_pico/pico-usb-test/: main.c
